# Need4Speed2D

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  needforspeed2d.sh
Valgrind_helpers/: MinimalQt.cpp  MinimalQt.h  MinimalSdl  MinimalSdl.cpp  MinimalSdl.h  valgrind.md
client/: CMakeLists.txt  Client.cpp  Client.h  ExceptionClient.h  ProtocolClient.cpp  ProtocolClient.h  ServerEvent.h  ThreadReceiver.cpp  ThreadReceiver.h  ThreadSenderClient.cpp  ThreadSenderClient.h  main.cpp
client/Game_GUI/: GameSoundManager.cpp  GameSoundManager.h  GameloopRace.cpp  GameloopRace.h  GuiSDL.cpp  GuiSDL.h  InputHandler.cpp  InputHandler.h  RacePhaseManager.cpp  RacePhaseManager.h
client/Game_GUI/render/: BarLifeRender.cpp  BarLifeRender.h  Button.cpp  Button.h  CarRender.cpp  CarRender.h  CarRenderAnimation.cpp  CarRenderAnimation.h  CheckpointRender.cpp  CheckpointRender.h  HintArrowRender.cpp  HintArrowRender.h  MiniMapRender.cpp  MiniMapRender.h  MuteSimbolRender.cpp  MuteSimbolRender.h  RenderCarUpgrades.cpp  RenderCarUpgrades.h  RenderPositions.cpp  RenderPositions.h  TimeRender.cpp  TimeRender.h
client/Game_GUI/sound/: PlayerSound.cpp  PlayerSound.h  Sound.cpp  Sound.h
client/Lobby/: CreateLobby.cpp  CreateLobby.h  JoinLobby.cpp  JoinLobby.h  Lobby.cpp  Lobby.h  StatBar.cpp  StatBar.h  prelobby.cpp  prelobby.h
common/: CMakeLists.txt  ISocket.h  operations_bytes.cpp  operations_bytes.h  peer_close_error.h  queue.h  resolver.cpp  resolver.h  resource_paths.cpp  resource_paths.h  socket.cpp  socket.h
editor/: CMakeLists.txt  filemanagement.cpp  filemanagement.h  main.cpp  mainwindow.cpp  mainwindow.h  mapoverlay.cpp  mapoverlay.h  mapview.cpp  mapview.h
etc/need4speed/: config.yaml
server/: CMakeLists.txt  command.h  config.cpp  config.h  event.cpp  event.h  main.cpp  server_error.h
server/conection/: acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  client_registry.cpp  client_registry.h  game.cpp  game.h  game_manager.cpp  game_manager.h  op_codes.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server_logic.cpp  server_logic.h  server_protocol.cpp  server_protocol.h
server/game/: car.cpp  car.h  car_design.h  categories.h  checkpoint_sensor.cpp  checkpoint_sensor.h  gameloop.cpp  gameloop.h  map_loader.cpp  map_loader.h  physic_world.cpp  physic_world.h  pole.cpp  pole.h  race_context.cpp  race_context.h  race_progress.h  race_system.cpp  race_system.h  snapshot_builder.cpp  snapshot_builder.h  world_state.cpp  world_state.h
tests/: MockSocket.h  test_protocol_client.cpp  test_protocol_server.cpp
var/need4speed/cities/: VC_nivel1.xcf
var/need4speed/client_img_render/: barlife_cleanxcf.xcf  img_upgrades.xcf  start_line.xcf  table_positions.xcf  upgrades.xcf
var/need4speed/mapas_jugables/: Altas Velocidades Vice City.json  Aprendiendo a estacionar San Andreas.json  Carrera Larga Liberty City.json  Choques Asegurados en Liberty City.json  El Atajo de San Andreas.json  Ida y Vuelta Vice City.json  Las Fabricas de San Andreas.json  Los Puentes de Vice City.json  Paseo por San Andreas.json
var/need4speed/matrices/: walkable_tiles_libertycity_completo.json  walkable_tiles_sanandreas_completo.json  walkable_tiles_vicecity_completo.json
